--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -9,6 +9,7 @@
         <li><a href="/nichrome">ニクロム線切断テスト</a></li>
         <li><a href="/motor">モーター操作テスト</a></li>
         <li><a href="/status">着地判定ステータス</a></li>
+        <li><a href="/distance_test">距離センサーテスト</a></li> <!-- 追加 -->
     </ul>
 </body>
 </html>
